--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Angeles\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=C:\\Users\\axelf\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
